[package]
name = "permanent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rand = { version = "0.8.5", features = ["simd_support"] }
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
simd-json = "0.13.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
