[package]
name = "permanent"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
rand = { version = "0.9.2" }
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
simd-json = "0.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
stacker = "0.1.15"
mimalloc = { version = "0.1.48", features = ["v3"] }

[profile.release]
lto = "thin"
debug = true
